--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,36 +1,68 @@
 footer {
-    background-color: #4b4e4e;
-    color: #fff;
-    padding: 40px 0;
-    margin-top: 20px;
+  background-color: #4b4e4e;
+  color: #fff;
+  padding: 40px 0;
+  margin-top: 20px;
 }
 
 .single-box {
-    text-align: center;
-    margin-bottom: 40px;
+  text-align: center;
+  margin-bottom: 40px;
 }
 
 .single-box p {
-    margin: 20px 0;
+  margin: 20px 0;
 }
 
 .single-box h3 {
-    margin-top: 30px;
-    font-size: 24px;
-    font-weight: bold;
+  margin-top: 30px;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .card-area {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .fa {
-    color: #fff;
-    font-size: 30px;
-    margin-right: 20px;
+  color: #fff;
+  font-size: 30px;
+  margin-right: 20px;
 }
 
 img {
-    width: 85%;
+  width: 70%;
+}
 
+canvas {
+  width: 100px;
+  height: 100px;
+  border: 1px solid #ccc;
+  display: none; /* oculto */
+}
+
+@keyframes vibrar {
+  0% {
+    transform: translateX(-2px) rotate(-1deg);
+  }
+  20% {
+    transform: translateX(2px) rotate(1deg);
+  }
+  40% {
+    transform: translateX(-2px) rotate(-1deg);
+  }
+  60% {
+    transform: translateX(2px) rotate(1deg);
+  }
+  80% {
+    transform: translateX(-2px) rotate(-1deg);
+  }
+  100% {
+    transform: translateX(-2px) rotate(-1deg);
+  }
+}
+
+.movimiento {
+  margin-left: 5px;
+  animation: vibrar 2s linear infinite;
 }
