--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,68 +1,68 @@
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-header{
-    width: 100%;
-    height: 75px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 10%;
-    background: rgba(0, 0, 0, 0.2);
+header {
+  width: 100%;
+  height: 75px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 10%;
+  background: rgba(0, 0, 0, 0.2);
 }
 
-.logo{
-    display: flex;
-    align-items: center;
+.logo {
+  display: flex;
+  align-items: center;
 }
 
-.logo img{
-    height: 70px;
+.logo img {
+  height: 70px;
 }
 
-.logo p{
-    font-size: 30px;
-    font-weight: bold;
-    color: #3974f4;
-
+.logo p a {
+  font-size: 30px;
+  font-weight: bold;
+  color: #3974f4;
 }
 
-nav li{
-    display: inline-block;
-    list-style: none;
-    padding: 0px 20px;
+nav li {
+  display: inline-block;
+  list-style: none;
+  padding: 0px 20px;
 }
 
-a,button{
-    font-size: 18px;
-    font-weight: 500;
-    color: #424242;
-    text-decoration: none;
-    cursor: pointer;
+a,
+button {
+  font-size: 18px;
+  font-weight: 500;
+  color: #424242;
+  text-decoration: none;
+  cursor: pointer;
 }
 
-button{
-    background: rgba(0, 0, 0, 0.2);
-    border: 2px solid #3974f4;
-    border-radius: 50px;
-    padding: 9px 25px;
+button {
+  background: rgba(0, 0, 0, 0.2);
+  border: 2px solid #3974f4;
+  border-radius: 50px;
+  padding: 9px 25px;
 }
 
-nav li a:hover{
-    color: #3974f4;
-    transition: all 0.4s ease 0s;
+nav li a:hover {
+  color: #3974f4;
+  transition: all 0.4s ease 0s;
 }
 
-button:hover{
-    background-color: #3974f4;
-    transition: all 0.4s ease 0s;
+button:hover {
+  background-color: #3974f4;
+  transition: all 0.4s ease 0s;
 }
 
-form input{
-    height: 40px;
-    width: 150px;
-    margin: 0px 10px;
-    border: 1px solid black;
-    font-size: 15px;
+form input {
+  height: 40px;
+  width: 150px;
+  margin: 0px 10px;
+  border: 1px solid black;
+  font-size: 15px;
 }
