--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,9 +1,13 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #e3f2fd;">
   <div class="container-fluid">
     <div class="logo">
-      <img src="assets/img/navbar/simi.png" alt="">
-      <p>Farmacias Parecidas</p>
-    </div>
+      <a class="nav-link" aria-current="page" [routerLink]="['principal']">
+        <img src="assets/img/navbar/simi.png" alt="">
+      </a>
+      <p>
+        <a class="nav-link" aria-current="page" [routerLink]="['principal']">Farmacias Parecidas</a>
+      </p>
+    </div>    
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
