--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -25,6 +25,12 @@
         <li class="nav-item">
           <a class="nav-link" aria-current="page" [routerLink]="['portafolio']">Portafolio</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" [routerLink]="['contacto']">Contacto</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" [routerLink]="['ayuda']">Ayuda</a>
+        </li>
       </ul>
       <button class="btn btn-outline-success"><a [routerLink]="['menucita']">Solicita una cita</a></button>
       <form class="d-flex" role="search">
