--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -33,6 +33,7 @@
         </li>
       </ul>
       <button class="btn btn-outline-success"><a [routerLink]="['menucita']">Solicita una cita</a></button>
+      <button class="btn btn-outline-success"><a [routerLink]="['login']">Registrarse</a></button>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Buscar nombre" aria-label="Search" [(ngModel)]="nombre" name="nombre">
         <button class="btn btn-outline-success" type="submit" (click)="buscarCitas()">Buscar</button>
