--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,49 @@
 body{
     background-color: bisque;
 }
+.wrapper {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+}
+
+.logo {
+    height: 130px;
+    margin-bottom: 10px;
+}
+
+.body {
+    width: 100%;
+    max-width: 330px;
+    margin: auto;
+    padding: 15px;
+    text-align: center;
+}
+
+.form-floating {
+    text-align: start;
+}
+
+.errorLabel {
+    margin-left: 5px;
+}
+
+.registro{
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+
+.form{
+    display: flex;
+    justify-content: center; /* Centrado horizontal */
+    align-items: center; /* Centrado vertical */
+    height: 100vh; /* Altura del contenedor */
+}
+
+
+.container {
+    text-align: center;
+    font-family: 'Teko', sans-serif;
+    font-size: 25px;
+  }
