ya corregi el calendario pa que sea mas vistoza la fecha

--- a/src/app/registro-citas/registro-citas.component.css
+++ b/src/app/registro-citas/registro-citas.component.css
@@ -3,6 +3,11 @@ h1 {
     font-size: 36px;
     margin-top: 50px;
   }
+
+  .fecha{
+    color: rgb(7, 7, 248);
+    font-size: 40px;
+  }
   
   form {
     max-width: 800px;
