--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -9,7 +9,7 @@
   <p>Parecido pero de un precio inferior</p>
 </div>
 <div class="recomendacion">
-  <mat-grid-list cols="3" rowHeight="250px">
+  <mat-grid-list cols="3" rowHeight="250px" > 
     <mat-grid-tile>
       <img src="assets/img/principal/uno.png" />
       <mat-grid-tile-footer>
@@ -30,17 +30,16 @@
     </mat-grid-tile>
   </mat-grid-list>
 </div>
-
-<iframe
-  style="display: block; margin: 30px auto"
-  width="560"
-  height="315"
-  [src]="video | domseguro : 'https://www.youtube.com/embed/'"
-  frameborder="0"
-  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-inpicture"
-  allowfullscreen
-></iframe>
-
+<div class="video-container">
+  <iframe
+    width="100%"
+    height="415"
+    [src]="video | domseguro : 'https://www.youtube.com/embed/'"
+    frameborder="0"
+    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-inpicture"
+    allowfullscreen
+  ></iframe>
+</div>
 <section class="appointment-section">
   <div class="appointment-container">
     <h2>Agenda una cita en nuestra farmacia</h2>
@@ -68,6 +67,7 @@
     </ol>
   </div>
 </section>
+
 <div class="encuesta">
   <mat-card>
     <mat-card-title>Encuesta de satisfacción</mat-card-title>
