--- a/src/app/acercade/acercade.component.html
+++ b/src/app/acercade/acercade.component.html
@@ -197,6 +197,22 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="card-alumno" style="margin-right: 250px;">
+                        <div class="card_landing" style="--i:url(assets/img/acercade/jacqueline.png)">
+                            <h6>{{ana.nombre}}</h6>
+                        </div>
+                        <div class="card_info">
+                            <div class="head">
+                                <p class="title">{{ana.nombre}}</p>
+                                <div class="description">
+                                </div>
+                            </div>
+                            <div class="content" style="font-size: 15px;">
+                                <p>{{ana.descripcion}}</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <br><br>
