--- a/src/app/portafolio/portafolio.component.css
+++ b/src/app/portafolio/portafolio.component.css
@@ -1,77 +1,100 @@
 body {
   background: linear-gradient(to bottom, #ffffff, #58aced);
-    font: 1.1em Arial, Helvetica, sans-serif;
-    
-  }
+  font: 1.1em Arial, Helvetica, sans-serif;
+}
 
-  img {
-    max-width: 100%;
-    display: block;
+img {
+  max-width: 100%;
+  display: block;
+}
+
+figure {
+  margin: 0;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  margin-bottom: 10px;
+  break-inside: avoid;
+}
+
+figure > img {
+  grid-row: 1 / -1;
+  grid-column: 1;
+}
+
+figure a {
+  color: black;
+  text-decoration: none;
+}
+
+figcaption {
+  grid-row: 2;
+  grid-column: 1;
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 0.2em 0.5em;
+  justify-self: start;
+}
+
+.container {
+  column-count: 3;
+  column-gap: 10px;
+  margin-top: 30px;
+}
+.card {
+  position: relative;
+  display: inline-block;
+}
+
+.card img {
+  width: 100%;
+  height: auto;
+}
+
+.card .text-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card:hover .text-overlay {
+  opacity: 1;
+}
+
+.card .text-overlay p {
+  color: #fff;
+  font-size: 18px;
+  text-align: center;
+  margin: 0;
+  padding: 20px;
+}
+
+@media (min-width: 576px) {
+  .card-columns {
+    column-count: 2;
   }
-  
-  figure {
-    margin: 0;
-    display: grid;
-    grid-template-rows: 1fr auto;
-    margin-bottom: 10px;
-    break-inside: avoid;
-  }
-  
-  figure > img {
-    grid-row: 1 / -1;
-    grid-column: 1;
-  }
-  
-  figure a {
-    color: black;
-    text-decoration: none;
-  }
-  
-  figcaption {
-    grid-row: 2;
-    grid-column: 1;
-    background-color: rgba(255,255,255,.5);
-    padding: .2em .5em;
-    justify-self: start;
-  }
-  
-  .container {
+}
+
+@media (min-width: 768px) {
+  .card-columns {
     column-count: 3;
-    column-gap: 10px;
-    margin-top: 30px;
   }
-  .card {
-    position: relative;
-    display: inline-block;
-  }
+}
 
-  .card img {
-    width: 100%;
-    height: auto;
+@media (min-width: 992px) {
+  .card-columns {
+    column-count: 4;
   }
+}
 
-  .card .text-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); 
-    opacity: 0;
-    transition: opacity 0.3s ease; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+@media (min-width: 1200px) {
+  .card-columns {
+    column-count: 5;
   }
-
-  .card:hover .text-overlay {
-    opacity: 1;
-  }
-
-  .card .text-overlay p {
-    color: #fff; 
-    font-size: 18px;
-    text-align: center;
-    margin: 0;
-    padding: 20px;
-  }
+}
