--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,34 +1,3 @@
-footer {
-  background-color: #4b4e4e;
-  color: #fff;
-  padding: 40px 0;
-  margin-top: 20px;
-}
-
-.single-box {
-  text-align: center;
-  margin-bottom: 40px;
-}
-
-.single-box p {
-  margin: 20px 0;
-}
-
-.single-box h3 {
-  margin-top: 30px;
-  font-size: 24px;
-  font-weight: bold;
-}
-
-.card-area {
-  margin-top: 20px;
-}
-
-.fa {
-  color: #fff;
-  font-size: 30px;
-  margin-right: 20px;
-}
 
 img {
   width: 70%;
@@ -65,4 +34,9 @@ canvas {
 .movimiento {
   margin-left: 5px;
   animation: vibrar 2s linear infinite;
+}
+
+.text {
+  color: white;
+  font-size: 16px;
 }
