--- a/src/app/cita-medico/cita-medico.component.html
+++ b/src/app/cita-medico/cita-medico.component.html
@@ -1,47 +1,112 @@
 <div class="container">
-    <div class="row">
-      <div class="col-md-3">
-        <div class="card my-card" (mouseenter)="onHover(true)" (mouseleave)="onHover(false)">
-          <img src="assets/img/solicita/doctor.webp" class="card-img-top" alt="imagen de la tarjeta">
-          <div class="card-body d-flex flex-column justify-content-center align-items-center">
-            <h5 class="card-title">Doctor</h5>
-            <p class="card-text text-center">Agenda una cita con el doctor para checar tu malestar</p>
-            <button class="btn btn-outline-primary" (click)="seleccionarMedico('Doctor')">Agendar cita</button>
-
-          </div>
+  <div class="row">
+    <div class="col-md-3">
+      <div
+        class="card my-card"
+        (mouseenter)="onHover(true)"
+        (mouseleave)="onHover(false)"
+      >
+        <img
+          src="assets/img/solicita/doctor.webp"
+          class="card-img-top"
+          alt="imagen de la tarjeta"
+        />
+        <div
+          class="card-body d-flex flex-column justify-content-center align-items-center"
+        >
+          <h5 class="card-title">Doctor</h5>
+          <p class="card-text text">
+            Agenda una cita con el doctor para checar tu malestar
+          </p>
+          <button
+            class="btn btn-outline-primary"
+            (click)="seleccionarMedico('Doctor')"
+          >
+            Agendar cita
+          </button>
         </div>
       </div>
-      <div class="col-md-3">
-        <div class="card my-card" (mouseenter)="onHover(true)" (mouseleave)="onHover(false)">
-          <img src="assets/img/solicita/dentista.jpg" class="card-img-top" alt="imagen de la tarjeta">
-          <div class="card-body d-flex flex-column justify-content-center align-items-center">
-            <h5 class="card-title">Dentista</h5>
-            <p class="card-text text-center">Agenda una cita con el dentista para checar tus dientes</p>
-            <button class="btn btn-outline-primary" (click)="seleccionarMedico('Dentista')">Agendar cita</button>
-
-          </div>
+    </div>
+    <div class="col-md-3">
+      <div
+        class="card my-card"
+        (mouseenter)="onHover(true)"
+        (mouseleave)="onHover(false)"
+      >
+        <img
+          src="assets/img/solicita/dentista.jpg"
+          class="card-img-top"
+          alt="imagen de la tarjeta"
+        />
+        <div
+          class="card-body d-flex flex-column justify-content-center align-items-center"
+        >
+          <h5 class="card-title">Dentista</h5>
+          <p class="card-text text-center text text">
+            Agenda una cita con el dentista para checar tus dientes
+          </p>
+          <button
+            class="btn btn-outline-primary"
+            (click)="seleccionarMedico('Dentista')"
+          >
+            Agendar cita
+          </button>
         </div>
       </div>
-      <div class="col-md-3">
-        <div class="card my-card" (mouseenter)="onHover(true)" (mouseleave)="onHover(false)">
-          <img src="assets/img/solicita/opto.jpg" class="card-img-top" alt="imagen de la tarjeta">
-          <div class="card-body d-flex flex-column justify-content-center align-items-center">
-            <h5 class="card-title">Optometrista</h5>
-            <p class="card-text text-center">Agenda una cita con el optometrista para checar tus ojos</p>
-            <button class="btn btn-outline-primary" (click)="seleccionarMedico('Optometrista')">Agendar cita</button>
-          </div>
+    </div>
+    <div class="col-md-3">
+      <div
+        class="card my-card"
+        (mouseenter)="onHover(true)"
+        (mouseleave)="onHover(false)"
+      >
+        <img
+          src="assets/img/solicita/opto.jpg"
+          class="card-img-top"
+          alt="imagen de la tarjeta"
+        />
+        <div
+          class="card-body d-flex flex-column justify-content-center align-items-center"
+        >
+          <h5 class="card-title">Optometrista</h5>
+          <p class="card-text text-center text text">
+            Agenda una cita con el optometrista para checar tus ojos
+          </p>
+          <button
+            class="btn btn-outline-primary"
+            (click)="seleccionarMedico('Optometrista')"
+          >
+            Agendar cita
+          </button>
         </div>
       </div>
-      <div class="col-md-3">
-        <div class="card my-card" (mouseenter)="onHover(true)" (mouseleave)="onHover(false)">
-          <img src="assets/img/solicita/veteri.jpg" class="card-img-top" alt="imagen de la tarjeta">
-          <div class="card-body d-flex flex-column justify-content-center align-items-center">
-            <h5 class="card-title">Veterinario</h5>
-            <p class="card-text text-center">Agenda una cita con el veterinario para checar a tu mascota</p>
-            <button class="btn btn-outline-primary" (click)="seleccionarMedico('Veterinario')">Agendar cita</button>
-          </div>
+    </div>
+    <div class="col-md-3">
+      <div
+        class="card my-card"
+        (mouseenter)="onHover(true)"
+        (mouseleave)="onHover(false)"
+      >
+        <img
+          src="assets/img/solicita/veteri.jpg"
+          class="card-img-top"
+          alt="imagen de la tarjeta"
+        />
+        <div
+          class="card-body d-flex flex-column justify-content-center align-items-center"
+        >
+          <h5 class="card-title">Veterinario</h5>
+          <p class="card-text text-center text text">
+            Agenda una cita con el veterinario para checar a tu mascota
+          </p>
+          <button
+            class="btn btn-outline-primary"
+            (click)="seleccionarMedico('Veterinario')"
+          >
+            Agendar cita
+          </button>
         </div>
       </div>
     </div>
   </div>
-  
+</div>
