--- a/src/app/contacto/contacto.component.html
+++ b/src/app/contacto/contacto.component.html
@@ -3,7 +3,7 @@
   <br />
 
   <div class="form-container">
-    <img src="../../assets/img/footer/simi.png" alt="Imagen de contacto" />
+    <img src="assets/img/footer/simi.png" alt="Imagen de contacto" />
     <div class="form-container">
       <form [formGroup]="contactForm" (ngSubmit)="submitForm()" novalidate>
         <div>
