--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
     <div *ngIf="!loading" class="body">
       <div class="form2">
-        <img class="logo" src="../../../assets/img/login.png" alt="Login" />
+        <img class="logo" src="assets/img/login.png" alt="Login" />
         <h3>Inicio con correo</h3>
         <form class="blur" (ngSubmit)="MetodoCorreo()" [formGroup]="loginCorreo">
           <div class="form-floating mb-3">
@@ -72,7 +72,7 @@
     </div>
   
     <div class="body">
-      <img class="logo" src="../../../assets/img/loginNumero.png" alt="Login" />
+      <img class="logo" src="assets/img/loginNumero.png" alt="Login" />
       <h4>Inicio con numero</h4>
       <form
         class="blur"
